# deepagents

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md  dependabot.yml  pr-file-labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  privileged.yml
.github/actions/uv_setup/: action.yml
.github/workflows/: _test.yml  auto-label-by-package.yml  check_cli_sdk_pin.yml  check_extras_sync.yml  check_lockfiles.yml  check_versions.yml  ci.yml  pr_labeler_file.yml  pr_lint.yml  release-please.yml  release-publish.yml  release.yml  tag-external-contributions.yml
docs/realtimex/: README.md  upgrade_playbook.md
docs/realtimex/scripts/: verify_upgrade.py
examples/: README.md
examples/content-builder-agent/: content_writer.py
examples/deep_research/: README.md
examples/downloading_agents/: README.md
examples/ralph_mode/: README.md  ralph_mode.py
examples/text-to-sql-agent/: .gitignore  README.md  agent.py  pyproject.toml
libs/acp/: Makefile  README.md  pyproject.toml  run.sh  run_demo_agent.sh
libs/acp/deepagents_acp/: __main__.py  agent.py  server.py  utils.py
libs/acp/examples/: demo_agent.py
libs/acp/tests/: chat_model.py  conftest.py  test_agent.py  test_command_allowlist.py  test_server.py
libs/cli/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libs/cli/deepagents_cli/: __init__.py  _version.py  agent.py  app.py  app.tcss  backends.py  clipboard.py  config.py  file_ops.py  image_utils.py  input.py  local_context.py  main.py  model_config.py  non_interactive.py  project_utils.py  sessions.py  shell.py  textual_adapter.py  tools.py  ui.py  version.py
libs/cli/deepagents_cli/integrations/: __init__.py  daytona.py  langsmith.py  modal.py  runloop.py  sandbox_factory.py
libs/cli/deepagents_cli/skills/: commands.py  load.py
libs/cli/deepagents_cli/widgets/: __init__.py  approval.py  autocomplete.py  chat_input.py  diff.py  history.py  loading.py  message_store.py  messages.py  status.py  thread_selector.py  tool_renderers.py  tool_widgets.py  welcome.py
libs/cli/examples/skills/skill-creator/: SKILL.md
libs/cli/scripts/: check_imports.py
libs/cli/tests/: README.md
libs/cli/tests/integration_tests/: test_sandbox_factory.py  test_sandbox_operations.py
libs/cli/tests/unit_tests/: test_agent.py  test_app.py  test_approval.py  test_args.py  test_autocomplete.py  test_backend_timeout.py  test_charset.py  test_chat_input.py  test_config.py  test_end_to_end.py  test_exception_handling.py  test_image_utils.py  test_input_parsing.py  test_local_context.py  test_main.py  test_main_args.py  test_messages.py  test_model_config.py  test_model_switch.py  test_non_interactive.py  test_sessions.py  test_shell.py  test_subagents.py  test_textual_adapter.py  test_thread_selector.py  test_ui.py  test_version.py  test_welcome.py
libs/deepagents/: Makefile  README.md  pyproject.toml
libs/deepagents-cli/: Makefile  README.md  pyproject.toml
libs/deepagents-cli/deepagents_cli/: README.md  __main__.py  _internal.py  _version.py  agent.py  agent_memory.py  app.py  app.tcss  config.py  execution.py  file_ops.py  input.py  main.py  project_utils.py  textual_adapter.py  token_utils.py  tools.py  ui.py
libs/deepagents-cli/deepagents_cli/integrations/: daytona.py  modal.py  runloop.py  sandbox_factory.py
libs/deepagents-cli/deepagents_cli/skills/: commands.py  load.py  middleware.py
libs/deepagents-cli/deepagents_cli/widgets/: approval.py  autocomplete.py  chat_input.py  messages.py  status.py  tool_renderers.py  welcome.py
libs/deepagents-cli/examples/skills/arxiv-search/: arxiv_search.py
libs/deepagents-cli/examples/skills/skill-creator/: SKILL.md
libs/deepagents-cli/tests/: test_project_memory.py
libs/deepagents-cli/tests/integration_tests/: test_sandbox_factory.py  test_sandbox_operations.py
libs/deepagents-cli/tests/integration_tests/benchmarks/: test_simple_tasks.py
libs/deepagents-cli/tests/unit_tests/: test_agent.py  test_args.py  test_autocomplete.py  test_config.py  test_end_to_end.py  test_version.py
libs/deepagents-cli/tests/unit_tests/skills/: test_commands.py  test_load.py
libs/deepagents/backends/: composite.py  protocol.py  sandbox.py
libs/deepagents/deepagents/: __init__.py  _version.py  graph.py  realtimex_graph.py  version.py
libs/deepagents/deepagents/backends/: __init__.py  composite.py  filesystem.py  local_shell.py  protocol.py  sandbox.py  store.py  utils.py
libs/deepagents/deepagents/middleware/: __init__.py  _utils.py  filesystem.py  memory.py  shell.py  skills.py  subagents.py  summarization.py
libs/deepagents/deepagents/realtimex_middleware/: __init__.py  agent_memory.py
libs/deepagents/middleware/: filesystem.py
libs/deepagents/tests/: README.md
libs/deepagents/tests/integration_tests/: test_deepagents.py  test_filesystem_middleware.py  test_full_agent_integration.py  test_memory_integration.py  test_subagent_middleware.py  test_summarization.py
libs/deepagents/tests/unit_tests/: chat_model.py  test_end_to_end.py  test_file_system_tools.py  test_local_sandbox_operations.py  test_middleware.py  test_middleware_async.py  test_sandbox_provider.py  test_subagents.py
libs/harbor/: Makefile  README.md  pyproject.toml
libs/harbor/deepagents_harbor/: __init__.py  analysis.py  backend.py  deepagents_wrapper.py  tracing.py
libs/harbor/deepagents_harbor/agents/: __init__.py  backend.py  main.py
libs/harbor/scripts/: analyze.py  create_langsmith_dataset.py  harbor_langsmith.py
libs/partners/daytona/: Makefile  README.md  pyproject.toml
libs/partners/daytona/langchain_daytona/: __init__.py  sandbox.py
libs/partners/daytona/tests/: test_import.py
libs/partners/modal/: Makefile  pyproject.toml
libs/partners/modal/langchain_modal/: sandbox.py
libs/partners/runloop/: Makefile  README.md  pyproject.toml
libs/partners/runloop/langchain_runloop/: __init__.py  sandbox.py
src/deepagents/: __init__.py  graph.py  realtimex_graph.py
(+26 files in other folders)
