[project]
name = "deepagents-workspace"
version = "0.0.0"
requires-python = ">=3.11,<4.0"

[tool.uv.workspace]
members = [
    "libs/deepagents",
    "libs/cli",
    "libs/acp",
    "libs/partners/*",
]
# harbor depends on the `harbor` PyPI package which requires Python >=3.12.
# uv workspaces enforce all members' requires-python at sync time, so
# including it would prevent syncing other packages with Python 3.11.
exclude = [
    "libs/harbor",
]

[tool.uv]
override-dependencies = [
    "openai>=1.109.1,<2.0.0",
    "e2b==2.4.3",
    "python-multipart>=0.0.22",
    "protobuf>=6.33.5",
]
constraint-dependencies = [
    "urllib3>=2.6.3",
]

[tool.uv.sources]
deepagents = { workspace = true }
deepagents-cli = { workspace = true }
deepagents-acp = { workspace = true }
langchain-daytona = { workspace = true }
langchain-modal = { workspace = true }
langchain-runloop = { workspace = true }
